Fix alignment issues of the cards

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ a {
 .content-one {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     
 }
 
@@ -118,19 +118,8 @@ a {
     padding: 20px;
 }
 
-.signup2 {
-    background-color: #3882F6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    border-radius: 6px;
-    border-color: white;
-    color: white;
-    margin: auto 30px;
-    border-style: solid;
-    padding: 4px 20px;
-    
+.content-one-image {
+    max-width: 520px;
 }
 
 .content-two {
@@ -144,8 +133,6 @@ a {
     display: flex;
     gap: 50px;
     justify-content: center;
-    
-    
 }
 
 .card {
@@ -155,23 +142,20 @@ a {
     justify-content: center; 
     max-width: 150px;
     flex: 1;
-    
-    
-    
 }
+
 .card-text {
-    /* max-width: 100px; */
-    font-size: 14px;
+    min-height: 60px;
+    font-size: 13px;
+    color: rgb(147, 146, 146);
     align-self: center;
     padding: auto;
     text-align: center;
-    
 }
 
 .card-image {
     width: 100%;
-    
-
+    padding-bottom: 10px;
 }
 
 .content-three {
@@ -202,8 +186,6 @@ li {
     display: flex;
     justify-content: center;
     color: white;
-    
-    
 }
 
 .content-four-blurb-box {
@@ -219,13 +201,26 @@ li {
     padding: 20px 40px;
     display: flex;
     flex-direction: column;
-   
     border-radius: 5px;
     font-size: 14px;
     font-weight: 300;
-    
-
 }
+
+.signup2 {
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    border-radius: 6px;
+    border-color: white;
+    color: white;
+    margin: auto 30px;
+    border-style: solid;
+    padding: 4px 20px;
+    
+}
+
 .header3 {
     font-size: 18px;
     font-weight: 500;
